# ANG

./: .gitignore  .gitmodules  AGE.py  ANG.sln  CMAkeLists.txt  session.rdbg
AGE/: AGE.hpp  AGE.vcxproj  AGE.vcxproj.filters  AGEAPI.hpp  CMakeLists.txt  Game.cpp  Game.h
AGE/Lib/yaml-cpp/Lib/: yaml-cpp.lib
AGE/Renderer/: Renderer.cpp  Renderer.h  Vertex.hpp
AGE/Renderer/Vulkan/: VkContext.cpp  VkContext.h  VkFrameSync.cpp  VkFrameSync.h  VkMemory.cpp  VkMemory.h  VkMesh.cpp  VkMesh.h  VkPhysicalDevice.cpp  VkPhysicalDevice.h  VkPipeline.cpp  VkPipeline.h  VkRenderTarget.cpp  VkShader.cpp  VkSwapchain.cpp  VkUtils.cpp  VkUtils.h  Vulkan.cpp  Vulkan.h  VulkanContext.cpp  VulkanData.h  VulkanFrameSync.cpp  VulkanMemory.cpp  VulkanMemory.h  VulkanMesh.cpp  VulkanMesh.h  VulkanPhysicalDevice.cpp  VulkanPipeline.cpp  VulkanPipeline.h  VulkanPipelineSystem.cpp  VulkanPipelineSystem.h  VulkanRenderTarget.cpp  VulkanRenderTarget.h  VulkanShader.cpp  VulkanShader.h  VulkanShaderSystem.cpp  VulkanShaderSystem.h  VulkanState.hpp  VulkanSwapchain.cpp  VulkanSwapchain.h  (+5 more)
AGE/Systems/: CommandSystem.cpp  CommandSystem.h
AGE/cmake/: FindGLFW3.cmake
ANG/: ANG.vcxproj  ANG.vcxproj.filters  ANGame.cpp  ANGame.h  CMakeLists.txt  Main.cpp
ANG/Shaders/Sub/: dummy2.vert
Analysis/: Analysis.vcxproj  Analysis.vcxproj.filters  Main.cpp
Analysis/Analysis/: HashMap_Analysis.cpp  HashMap_Analysis.h
Core/: Attributes.hpp  BitField.hpp  BuildScheme.hpp  CMakeLists.txt  Core.vcxproj  Core.vcxproj.filters  DArray.hpp  File.cpp  File.h  Function.hpp  Handle.hpp  Hash.h  HashMap.hpp  Meta.hpp  NonCopyable.hpp  Pair.hpp  Platform.hpp  Random.h  Range.hpp  SArray.hpp  StackArray.hpp  StaticArray.hpp  String.hpp  StringBuilder.hpp  StringMap.hpp  StringUtils.hpp  StringView.hpp  Timer.hpp  Types.hpp  Version.hpp
Core/AGEFile/: AGEFile.cpp  AGEFile.h
Core/Log/: Assert.h  Assert.hpp  Log.cpp  Log.h
Core/Math/: Interpolation.hpp  Mat.hpp  Math.hpp  Quat.hpp  Values.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp
Core/Memory/: Allocator.hpp
Core/Preprocessor/: Utils.h
Core/Profiler/: HitProfiler.cpp  HitProfiler.h  TimeProfiler.cpp  TimeProfiler.h
Core/Tests/: BitField_Tests.cpp  Core_Tests.runsettings  Core_Tests.vcxproj  Core_Tests.vcxproj.filters  DArray_Tests.cpp  HashMap_Tests.cpp  Meta_Tests.cpp  Range_Tests.cpp  SArray_Tests.cpp  StackArray_Tests.cpp
Core/Tests/Math/: Mat_Tests.cpp  Math_Test.cpp  Quat_Tests.cpp  Vec2_Test.cpp  Vec3_Test.cpp  Vec4_Test.cpp
Core_Tests/: Core_Tests.runsettings  Core_Tests.vcxproj  Core_Tests.vcxproj.filters  DArray_Tests.cpp  Meta_Tests.cpp  SArray_Tests.cpp  StaticArray_Tests.cpp
Core_Tests/Math/: Mat_Tests.cpp  Math_Test.cpp  Quat_Tests.cpp  Vec2_Test.cpp  Vec3_Test.cpp  Vec4_Test.cpp
Core_Tests/Preprocessor/: Utils_Tests.cpp
Docs/AgeFileFormat/: age_format.txt  prototype.age
Properties/: Debug.props  Release.props  ReleaseDbgInfo.props
Tests/: CMakeLists.txt
Tests/Core/: AGEFile_Tests.cpp  BitField_Tests.cpp  CMakeLists.txt  Core_Tests.vcxproj  Core_Tests.vcxproj.filters  DArray_Tests.cpp  Function_Tests.cpp  HashMap_Tests.cpp  Main_Tests.cpp  Meta_Tests.cpp  Range_Tests.cpp  SArray_Tests.cpp  StackArray_Tests.cpp  StringBuilder_Tests.cpp  StringView_Tests.cpp  String_Tests.cpp
Tests/Core/Math/: Mat_Tests.cpp  Math_Test.cpp  Quat_Tests.cpp  Vec2_Test.cpp  Vec3_Test.cpp  Vec4_Test.cpp
Tests/Core/Memory/: Allocator_Tests.cpp
Tests/Core/Preprocessor/: Utils_Tests.cpp
Tests/Core/TestUtils/: TestNonCopyable.hpp
Tools/: CMakeLists.txt  compileShaders.py
Tools/ShaderCompiler/: CMakeLists.txt  ShaderCompiler.vcxproj  ShaderCompiler.vcxproj.filters
Tools/ShaderCompiler/Source/: Compiler.cpp  Compiler.h  Includer.cpp  Includer.h  Main.cpp
Tools/ShaderCompiler/TestShaders/Include2/: meshCore.frag.glsl
Tools/ShaderCompiler/TestShaders/Src/: dummy.frag
Tools/ShaderReflect/: CMakeLists.txt
Tools/Tools/ShaderCompiler/: CMakeLists.txt  ShaderCompiler.vcxproj  ShaderCompiler.vcxproj.filters
Tools/Tools/ShaderCompiler/Lib/shaderc/lib/: shaderc.lib
Tools/Tools/ShaderCompiler/Source/: Compiler.cpp  Compiler.h  Extensions.hpp  Includer.cpp  Includer.h  Main.cpp
Tools/Tools/ShaderCompiler/TestShaders/Include1/: meshCore.vert.glsl
